--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -7,12 +7,12 @@
 }
 .myInput {
     font-family: 'Fredoka', sans-serif;
-    width: 170px;
+    width: 45%;
     height: 10px;
-    border-radius: 2px;
     color: black;
     padding: 7px 0;
-    border-bottom: 1px solid lightcoral;
+    border-bottom: 1px solid lightgrey;
     font-size: 20px;
+    background: transparent;
 }
 
