--- a/src/components/UI/modal/MyModal.module.css
+++ b/src/components/UI/modal/MyModal.module.css
@@ -6,10 +6,11 @@
     left: 0;
     display: none;
     background: rgba(0, 0, 0, 0.5);
+    padding: 0 30px;
 }
 
 .myModal_content {
-    min-width: 500px;
+    max-width: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
