--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@
 
 
 
+
 @media (max-width: 620px) {
     .todo_elem > button{
         font-size: 16px;
@@ -99,6 +100,7 @@
         padding: 0 20px;
     }
     .todo_elem > button:hover{
+        color: black;
         border: none;
     }
     .todo_title{
@@ -118,6 +120,8 @@
     }
     .todo_title > div > input{
         font-size: 15px
-
+    }
+    .todo_elem_input{
+        width: 10px;
     }
 }
